expand lists/: +14 new files, expand 4, update README → 36 total
New: mysql, rabbitmq, elasticsearch, mongodb, curl, openssl, tmux,
regex, phpunit-pest, cron, aws-cli, terraform, jwt-oauth, makefile.
Expanded: software-architectures (USE/AVOID per pattern), api-design
(OpenAPI 3.1 + idempotency key deep + webhook signing), spring-topics
(VirtualThreads trade-offs + Modulith + SB 3.4), redis-topics
(Redis 7.4 + MEMORY commands + Redis Stack modules).
README restructured into 10 category groups.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>